<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/nav_feed"
        android:icon="@drawable/ic_baseline_rss_feed_24"
        android:title="@string/feed"/>

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/about"/>

    <item
        android:id="@+id/nav_dev"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/developer"/>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_baseline_login_24"
                android:title="@string/log"/>
        </menu>
    </item>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/share"/>

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_baseline_star_rate_24"
                android:title="@string/rate_us"/>
        </menu>
    </item>

</menu>